# api-cli

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  TODO
.github/workflows/: release.yml  tests.yml
src/: commands.rs  error.rs  lib.rs  main.rs  models.rs
src/commands/: collection.rs  environment.rs  request.rs  run.rs  utils.rs
tests/: github_api.rs
tests/collections/GitHub/: collection.json  collection.yaml
tests/collections/GitHub/GraphQL/: GetUserAndRepos.yaml
tests/collections/GitHub/Repository/: CreateRepositoryForAuthenticatedUser.json  CreateRepositoryForAuthenticatedUser.yaml  GetUserRepositories.json  GetUserRepositories.yaml
tests/collections/GitHub/User/: GetAuthenticatedUser.json  GetAuthenticatedUser.yaml  GetUser.json  GetUser.yaml
tests/collections/GitHub/environments/: Dev.yaml  GitHub.json  GitHub.yaml
