[package]
name = "api-cli"
version = "0.1.2"
description = "Command line API Client inspired by Bruno"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
repository = "https://github.com/mathieu-lemay/api-cli"
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/main.rs"
name = "api-cli"
test = false

[dependencies]
ansi-str = "0.8.0"
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
clap_complete = "4.5.7"
colored_json = "5.0.0"
dirs = "5.0.1"
env_logger = "0.11.3"
handlebars = "5.1.2"
jsonpath-rust = "0.6.0"
log = "0.4.21"
once_cell = "1.19.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.34"
tabled = { version = "0.15.0", features = ["ansi"] }
textwrap = { version = "0.16.1", features = ["terminal_size"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.9.1", features = ["v4"] }

[dev-dependencies]
rstest = "0.21.0"
serde_urlencoded = "0.7.1"
wiremock = "0.6.0"

[features]
native-tls-vendored = ["reqwest/native-tls-vendored"]
